--- a/themes/portfolio-klsx/layouts/partials/header.html
+++ b/themes/portfolio-klsx/layouts/partials/header.html
@@ -1,5 +1,3 @@
-<!-- https://stackoverflow.com/questions/73434861/transparent-navbar-with-bulma-css-not-working -->
-
 <nav class="navbar is-transparent is-fixed-top fond-0">
     <div class="container">
         <div class="navbar-brand">
@@ -9,13 +7,13 @@
         </div>
 
         <div class="navbar-end ">
-            <a class="navbar-item has-text-white">
+            <a class="navbar-item has-text-white" href="/">
                 Accueil
             </a>
-            <a class="navbar-item has-text-white">
+            <a class="navbar-item has-text-white" href="/competences">
                 Compétences
             </a>
-            <a class="navbar-item has-text-white">
+            <a class="navbar-item has-text-white" href="/realisations">
                 Réalisation
             </a>
         </div>
