--- a/themes/portfolio-klsx/layouts/index.html
+++ b/themes/portfolio-klsx/layouts/index.html
@@ -15,10 +15,11 @@
   </div>
 </section>
 
-
-<section class="section is-medium has-text-centered	">
+<section class="section is-medium has-text-centered ">
   <h1 class="title">A propos de moi</h1>
-  <div class="columns is-centered is-vcentered">
+  <br>
+  <br>
+  <div class="columns is-centered is-vcentered mx-5 px-5">
     <div class="column is-two-fifths">
       <img src="/img/about.jpg" width="75%" alt="">
     </div>
@@ -49,10 +50,66 @@
 </section>
 
 
-<section class="section is-medium has-text-centered	">
-  <h1 class="title">Mon parcours</h1>
+<section class="section mb-6">
+  <h1 class="title has-text-centered">Mon parcours</h1>
+  <br>
+  <br>
+  <div class="timeline is-centered mx-5 px-5">
+    <header class="timeline-header">
+      <!-- <span class="tag is-medium is-primary">Start</span> -->
+    </header>
+    <div class="timeline-item">
+      <div class="timeline-marker is-primary"></div>
+      <div class="timeline-content">
+        <p class="heading">Alternance Fonroche Lighting</p>
+        <p class="heading">Poste : Administrateur Système et réseau</p>
+
+        <p>Deux années durant lesquelles j'ai développé et maintenu des applications. 
+          J'ai travaillé sur le projet d'une application mobile à destination des clients de l'entreprise.
+           Ainsi que sur la maintenance et le développement de nouvelles versions de l'application de suivi de production.</p>
+      </div>
+    </div>
+    <div class="timeline-item">
+      <div class="timeline-marker">
+      </div>
+      <div class="timeline-content">
+        <p class="heading">Alternance Fonroche Lighting</p>
+        <p class="heading">Poste : Administrateur Système et réseau</p>
+
+        <p>Deux années durant lesquelles j'ai développé et maintenu des applications. 
+          J'ai travaillé sur le projet d'une application mobile à destination des clients de l'entreprise.
+           Ainsi que sur la maintenance et le développement de nouvelles versions de l'application de suivi de production.</p>
+      </div>
+    </div>
+    <div class="timeline-item">
+      <div class="timeline-marker">
+      </div>
+      <div class="timeline-content">
+        <p class="heading">Alternance Fonroche Lighting</p>
+        <p class="heading">Poste : Administrateur Système et réseau</p>
+
+        <p>Deux années durant lesquelles j'ai développé et maintenu des applications. 
+          J'ai travaillé sur le projet d'une application mobile à destination des clients de l'entreprise.
+           Ainsi que sur la maintenance et le développement de nouvelles versions de l'application de suivi de production.</p>
+      </div>
+    </div>
+    <header class="timeline-header">
+      <!-- <span class="tag is-medium is-primary">End</span> -->
+    </header>
+  </div>
   
 </section>
 
-{{ .Content }}
+<section class="section has-text-centered">
+  <h1 class="title">Mes certifications</h1>
+  <br>
+  <br>
+  <div class="columns mx-5 px-5">
+    <div class="column">Certif 1</div>
+    <div class="column">Certif 2</div>
+    <div class="column">Certif 3</div>
+  </div>
+</section>
+
+<!-- {{ .Content }} -->
 {{ end }}
