--- a/themes/portfolio-klsx/layouts/partials/head.html
+++ b/themes/portfolio-klsx/layouts/partials/head.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <link rel="stylesheet" href="/css/bulma-timeline.min.css" >
     <link rel="stylesheet" href="/css/styles.css" >
     <title>{{ block "title" . }}
       {{ .Site.Title }}
