Rework index page

--- a/themes/portfolio-klsx/layouts/partials/header.html
+++ b/themes/portfolio-klsx/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-transparent is-fixed-top fond-0">
     <div class="container">
         <div class="navbar-brand">
-            <a class="navbar-item has-text-white">
+            <a class="navbar-item has-text-white" href="/">
                 Kylian LE SAUX
             </a>
         </div>
@@ -14,7 +14,7 @@
                 Compétences
             </a>
             <a class="navbar-item has-text-white" href="/realisations">
-                Réalisation
+                Réalisations
             </a>
         </div>
     </div>
