--- a/themes/portfolio-klsx/layouts/partials/footer.html
+++ b/themes/portfolio-klsx/layouts/partials/footer.html
@@ -1,12 +1,30 @@
 
+<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 <script src="/js/script.js"></script>
-
 <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+        Contact
+        <br>
+        <a href="mailto:lesauxkylian@gmail.com">
+          <span class="icon-text">
+            <span>Mail</span>
+            <span class="icon">
+              <i class="fa fa-envelope"></i>
+            </span>
+          </span>
+        </a>
+
+        <a href="">
+          <span class="icon-text">
+            <span> Linkedin</span>
+            <span class="icon">
+              <i class="fa-brands fa-linkedin"></i>
+            </span>
+          </span>
+        </a>
+        <br>
+        Copyright © Kylian LE SAUX 2022
       </p>
     </div>
   </footer>
