Add link to pages  on parcours section

--- a/themes/portfolio-klsx/layouts/partials/footer.html
+++ b/themes/portfolio-klsx/layouts/partials/footer.html
@@ -3,8 +3,7 @@
 <script src="/js/script.js"></script>
 <footer class="footer">
     <div class="content has-text-centered">
-      <p>
-        Contact
+       <p class="heading">Me contacter</p>
         <br>
         <a href="mailto:lesauxkylian@gmail.com">
           <span class="icon-text">
@@ -14,8 +13,7 @@
             </span>
           </span>
         </a>
-
-        <a href="">
+        <a href="https://www.linkedin.com/in/kylian-le-saux/">
           <span class="icon-text">
             <span> Linkedin</span>
             <span class="icon">
@@ -24,7 +22,6 @@
           </span>
         </a>
         <br>
-        Copyright © Kylian LE SAUX 2022
-      </p>
+        <p class="heading">Copyright © Kylian LE SAUX 2022</p>
     </div>
   </footer>
