--- a/themes/portfolio-klsx/layouts/partials/header.html
+++ b/themes/portfolio-klsx/layouts/partials/header.html
@@ -1,19 +1,19 @@
 <nav class="navbar is-transparent is-fixed-top fond-0">
     <div class="container">
         <div class="navbar-brand">
-            <a class="navbar-item has-text-white" href="/">
+            <a class="navbar-item navbar-text" href="/">
                 Kylian LE SAUX
             </a>
         </div>
 
         <div class="navbar-end ">
-            <a class="navbar-item has-text-white" href="/">
+            <a class="navbar-item navbar-text" href="/">
                 Accueil
             </a>
-            <a class="navbar-item has-text-white" href="/competences">
+            <a class="navbar-item navbar-text" href="/competences">
                 Compétences
             </a>
-            <a class="navbar-item has-text-white" href="/realisations">
+            <a class="navbar-item navbar-text" href="/realisations">
                 Réalisations
             </a>
         </div>
