--- a/themes/portfolio-klsx/layouts/partials/parcours.html
+++ b/themes/portfolio-klsx/layouts/partials/parcours.html
@@ -12,19 +12,25 @@
         <div class="timeline-content has-text-centered">
           <div class="columns mb-5">
             <div class="column">
-              <p class="heading">Alternance Fonroche Lighting</p>
+              <p class="parcours-header">Alternance à Fonroche Lighting</p>
+              <p class="heading"> De septembre 2021 à août 2023 - 2 ans</p>
               <p class="heading">Poste : Administrateur Système et réseau</p>
             </div>
             <div class="columns is-centered is-vcentered">
-              <figure class="image is-96x96">
-                <img src="/img/fl.jpg" alt="Image">
-              </figure>
+              <a href="https://www.fonroche-eclairagesolaire.fr/">
+
+                <figure class="image is-96x96">
+                  <img src="/img/fl.jpg" alt="Image">
+                </figure>
+              </a>
             </div>
           </div>
   
-          <p class="has-text-left">Deux années durant lesquelles j'ai développé et maintenu des applications. 
+          <p class="has-text-left mb-2">Deux années durant lesquelles j'ai développé et maintenu des applications. 
             J'ai travaillé sur le projet d'une application mobile à destination des clients de l'entreprise.
              Ainsi que sur la maintenance et le développement de nouvelles versions de l'application de suivi de production.</p>
+             <a class="button red" href="/parcours/fonroche-lighting">Une expérience formatrice </a>
+
         </div>
       </div>
       <div class="timeline-item">
@@ -33,19 +39,28 @@
         <div class="timeline-content mx-5">
           <div class="columns mb-5  has-text-left">
             <div class="column is-three-quarters mr-5">
-              <p class="heading ">Stage Cocoricom </p>
+              <p class="parcours-header ">Stage à Cocoricom </p>
+              <p class="heading"> De fevrier 2021 à août 2021 - 6 mois</p>
               <p class="heading ">Poste : Assistant transformation numérique</p>
             </div>
-            <div class="columns is-centered is-vcentered">
-              <figure class="image">
-                <img src="/img/cocoricom.png" alt="Image">
-              </figure>
+              <div class="columns is-centered is-vcentered">
+                <div class="container">
+
+                  <a href="http://cocoricom.fr">
+                    <figure class="image">
+                      <img src="/img/cocoricom.png" alt="Image">
+                    </figure>
+                  </a>
+                </div>
             </div>
           </div>
   
-          <p class="has-text-left">Deux années durant lesquelles j'ai développé et maintenu des applications. 
+          <p class="has-text-left mb-2">Deux années durant lesquelles j'ai développé et maintenu des applications. 
             J'ai travaillé sur le projet d'une application mobile à destination des clients de l'entreprise.
              Ainsi que sur la maintenance et le développement de nouvelles versions de l'application de suivi de production.</p>
+             <div class="container">
+               <a class="button green" href="/parcours/cocoricom">Le monde des startups</a>
+             </div>
         </div>
       </div>
       <div class="timeline-item">
@@ -54,19 +69,23 @@
         <div class="timeline-content has-text-centered">
           <div class="columns mb-5 ">
             <div class="column ">
-              <p class="heading">Intech </p>
+              <p class="parcours-header">Formation Intech du Groupe AEN</p>
+              <p class="heading"> De septembre 2018 à août 2023 - 5 ans</p>
               <p class="heading ">Filière Système d'Information</p>
             </div>
             <div class="columns is-centered is-vcentered">
-              <figure class="image is-96x96">
-                <img src="/img/aen.png" alt="Image">
-              </figure>
+              <a href="http://groupe-aen.info/">
+                <figure class="image is-96x96">
+                  <img src="/img/aen.png" alt="Image">
+                </figure>
+              </a>
             </div>
           </div>
   
-          <p class="has-text-left">Deux années durant lesquelles j'ai développé et maintenu des applications. 
+          <p class="has-text-left mb-2">Deux années durant lesquelles j'ai développé et maintenu des applications. 
             J'ai travaillé sur le projet d'une application mobile à destination des clients de l'entreprise.
              Ainsi que sur la maintenance et le développement de nouvelles versions de l'application de suivi de production.</p>
+             <a class="button" href="/parcours/intech">Ma formation au monde informatique</a>
         </div>
       </div>
       <header class="timeline-header">
