Start the list of competence article

--- a/themes/portfolio-klsx/static/css/styles.css
+++ b/themes/portfolio-klsx/static/css/styles.css
@@ -108,3 +108,9 @@ p {
   margin-left: auto !important;
   margin-right: auto !important;
 }
+.image-block {
+  object-fit: cover !important;
+}
+.card {
+  background-color: #080c11;
+}
