--- a/themes/portfolio-klsx/layouts/partials/footer.html
+++ b/themes/portfolio-klsx/layouts/partials/footer.html
@@ -1,6 +1,11 @@
+<div class="block top">
+  <a class="top-link">
+    <span class="icon up">
+      <i class="fa-solid fa-arrow-up fa-5x fa-fw"></i>
+    </span>
+  </a>
+</div>
 
-<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-<script src="/js/script.js"></script>
 <footer class="footer">
     <div class="content has-text-centered">
        <p class="heading">Me contacter</p>
@@ -25,3 +30,7 @@
         <p class="heading">Copyright © Kylian LE SAUX 2022</p>
     </div>
   </footer>
+
+
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+<script src="/js/script.js"></script>
