--- a/themes/portfolio-klsx/layouts/realisations/list.html
+++ b/themes/portfolio-klsx/layouts/realisations/list.html
@@ -2,23 +2,16 @@
 
 <section class="section mt-6">
     <div class="has-text-centered mb-5">
-        <h1 class="title ">Compétences</h1>
+        <h1 class="title ">Réalisations</h1>
     </div>
-    <div class="container ">
-        <div class="selector mb-5">
-            <button class="button btn-default filter-button active" data-filter="all">Toutes</button>
-            <button class="button btn-default filter-button" data-filter="humaine">Humaines</button>
-            <button class="button btn-default filter-button" data-filter="technique">Techniques</button>  
-        </div>
-
         <div class="columns is-multiline">
             {{ range .Pages }}
-            <div class="column is-half filter {{ .Params.tags }}">
+            <div class="column is-half">
                 <a href="{{ .RelPermalink }}">
                 <div class="card">
                     <div class="card-image">
                         <figure class="image is-3by1">
-                            <img class="image-block" src="/img/comp/{{.Title | lower }}.jpg" alt="Placeholder image">
+                            <img class="image-block" src="/img/real/{{ .Params.PicName}}" alt="Placeholder image">
                         </figure>
                     </div>
                     <div class="card-content">
