Add git actions

--- a/themes/portfolio-klsx/layouts/competences/list.html
+++ b/themes/portfolio-klsx/layouts/competences/list.html
@@ -24,7 +24,7 @@
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content">
-                                <p class="title is-4">{{ .Title }}</p>
+                                <p class="title is-4">{{ .Title }} - {{ .Params.Level | humanize }}</p>
                                 <p class="subtitle is-6"> {{ .Description }}</p>
                                 <hr class="comp">
                             </div>
