--- a/themes/portfolio-klsx/layouts/partials/parcours.html
+++ b/themes/portfolio-klsx/layouts/partials/parcours.html
@@ -26,9 +26,7 @@
             </div>
           </div>
   
-          <p class="has-text-left mb-2">Deux années durant lesquelles j'ai développé et maintenu des applications. 
-            J'ai travaillé sur le projet d'une application mobile à destination des clients de l'entreprise.
-             Ainsi que sur la maintenance et le développement de nouvelles versions de l'application de suivi de production.</p>
+          <p class="has-text-left mb-2">A régiger</p>
              <a class="button red" href="/parcours/fonroche-lighting">Une expérience formatrice </a>
 
         </div>
@@ -55,9 +53,7 @@
             </div>
           </div>
   
-          <p class="has-text-left mb-2">Deux années durant lesquelles j'ai développé et maintenu des applications. 
-            J'ai travaillé sur le projet d'une application mobile à destination des clients de l'entreprise.
-             Ainsi que sur la maintenance et le développement de nouvelles versions de l'application de suivi de production.</p>
+          <p class="has-text-left mb-2">A régiger</p>
              <div class="container">
                <a class="button green" href="/parcours/cocoricom">Le monde des startups</a>
              </div>
@@ -82,9 +78,7 @@
             </div>
           </div>
   
-          <p class="has-text-left mb-2">Deux années durant lesquelles j'ai développé et maintenu des applications. 
-            J'ai travaillé sur le projet d'une application mobile à destination des clients de l'entreprise.
-             Ainsi que sur la maintenance et le développement de nouvelles versions de l'application de suivi de production.</p>
+          <p class="has-text-left mb-2">A régiger</p>
              <a class="button" href="/parcours/intech">Ma formation au monde informatique</a>
         </div>
       </div>
