--- a/themes/portfolio-klsx/layouts/_default/list.html
+++ b/themes/portfolio-klsx/layouts/_default/list.html
@@ -1,10 +1,50 @@
 {{ define "main" }}
-<section class="section">
-    <p class="heading">{{ .Title }}</p>
-    {{ range .Pages }}
-    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-    {{ end }}
+
+<section class="section mt-6">
+    <div class="has-text-centered mb-5">
+        <h1 class="title ">{{.Title }}</h1>
+    </div>
+    <div class="container">
+
+        <div class="columns is-multiline">
+            {{ range .Pages }}
+            <div class="column is-half">
+                <a href="{{ .RelPermalink }}">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-3by1">
+                                <img class="image-block" src="/img/gen/{{ .Params.PicName}}" alt="Placeholder image">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-content">
+                                    <p class="title is-4">{{ .Title }}</p>
+                                    <p class="subtitle is-6"> {{ .Description }}</p>
+                                    <hr class="comp">
+                                </div>
+                            </div>
+                            <div class="content">
+                                <p class="subtitle is-6">En lien avec</p>
+                                {{ with .Params.related }}
+                                {{ range . }}
+                                {{ with site.GetPage . }}
+                                <a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a>
+                                {{ end }}
+                                {{ end }}
+                                {{ end }}
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            {{ end  }}
+        </div>
+    </div>
+    </div>
+
 </section>
+
 
 
 {{ end }}
