Comp single page format

--- a/themes/portfolio-klsx/layouts/partials/parcours.html
+++ b/themes/portfolio-klsx/layouts/partials/parcours.html
@@ -16,7 +16,7 @@
               <p class="heading"> De septembre 2021 à août 2023 - 2 ans</p>
               <p class="heading">Poste : Administrateur Système et réseau</p>
             </div>
-            <div class="columns is-centered is-vcentered">
+            <div class="columns is-centered is-vcentered ml-2">
               <a href="https://www.fonroche-eclairagesolaire.fr/">
 
                 <figure class="image is-96x96">
@@ -69,7 +69,7 @@
               <p class="heading"> De septembre 2018 à août 2023 - 5 ans</p>
               <p class="heading ">Filière Système d'Information</p>
             </div>
-            <div class="columns is-centered is-vcentered">
+            <div class="columns is-centered is-vcentered ml-2">
               <a href="http://groupe-aen.info/">
                 <figure class="image is-96x96">
                   <img src="/img/aen.png" alt="Image">
