--- a/themes/portfolio-klsx/layouts/realisations/list.html
+++ b/themes/portfolio-klsx/layouts/realisations/list.html
@@ -13,7 +13,7 @@
                     <div class="card">
                         <div class="card-image">
                             <figure class="image is-3by1">
-                                <img class="image-block" src="/img/real/{{ .Params.PicName}}" alt="Placeholder image">
+                                <img class="image-block" src="/img/{{ .Params.PicPath }}" alt="Placeholder image">
                             </figure>
                         </div>
                         <div class="card-content">
