--- a/themes/portfolio-klsx/layouts/competences/list.html
+++ b/themes/portfolio-klsx/layouts/competences/list.html
@@ -4,47 +4,43 @@
     <div class="has-text-centered mb-5">
         <h1 class="title ">Compétences</h1>
     </div>
-    <div class="container ">
-        <div class="selector mb-5">
-            <button class="button btn-default filter-button active" data-filter="all">Toutes</button>
-            <button class="button btn-default filter-button" data-filter="humaine">Humaines</button>
-            <button class="button btn-default filter-button" data-filter="technique">Techniques</button>  
-        </div>
+    <div class="container">
 
         <div class="columns is-multiline">
             {{ range .Pages }}
-            <div class="column is-half filter {{ .Params.tags }}">
+            <div class="column is-half">
                 <a href="{{ .RelPermalink }}">
-                <div class="card">
-                    <div class="card-image">
-                        <figure class="image is-3by1">
-                            <img class="image-block" src="/img/comp/{{.Title | lower }}.jpg" alt="Placeholder image">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4">{{ .Title }} - {{ .Params.Level | humanize }}</p>
-                                <p class="subtitle is-6"> {{ .Description }}</p>
-                                <hr class="comp">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-3by1 article">
+                                <img class="image-block" src="/img/{{ .Params.PicPath }}" alt="Placeholder image">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-content">
+                                    <p class="title is-4">{{ .Title }} - {{ .Params.Level }}</p>
+                                    <p class="subtitle is-6"> {{ .Description }}</p>
+                                    <hr class="comp">
+                                </div>
+                            </div>
+                            <div class="content">
+                                <p class="subtitle is-6">En lien avec</p>
+                                {{ with .Params.related }}
+                                {{ range . }}
+                                {{ with site.GetPage . }}
+                                <a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a>
+                                {{ end }}
+                                {{ end }}
+                                {{ end }}
                             </div>
                         </div>
-                        <div class="content">
-                            <p class="subtitle is-6">En lien avec</p>
-                            {{ with .Params.related }}
-                                {{ range . }}
-                                    {{ with site.GetPage . }}
-                                        <a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a>
-                                    {{ end }}
-                                {{ end }}
-                            {{ end }}
-                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
             </div>
             {{ end  }}
         </div>
+    </div>
     </div>
 
 </section>
