--- a/themes/portfolio-klsx/layouts/_default/list.html
+++ b/themes/portfolio-klsx/layouts/_default/list.html
@@ -11,15 +11,12 @@
             <div class="column is-half">
                 <a href="{{ .RelPermalink }}">
                     <div class="card">
-                        {{ $imgRender := "" }}
-                        {{ if isset .Params "PicPath" }}
-                            {{ $imagePath := printf "images/%s" .Params.PicPath }}
-                            {{ $asset := resources.Get $imagePath }}
-                            {{ $imgRender := $asset.Resize "x600 webp picture" }}
-                        {{ end }}
+                        {{ $imagePath := printf "images/%s" .Params.PicPath }}
+                        {{ $asset := resources.Get $imagePath }}
+                        {{ $img := $asset.Fit "600x600" }}
                         <div class="card-image">
                             <figure class="image is-3by1">
-                                <img class="image-block" src="{{ $imgRender }}" alt="Placeholder image">
+                                <img class="image-block" src="{{ $img.RelPermalink }}" alt="Placeholder image">
                             </figure>
                         </div>
                         <div class="card-content">
