--- a/themes/portfolio-klsx/layouts/_default/list.html
+++ b/themes/portfolio-klsx/layouts/_default/list.html
@@ -2,7 +2,7 @@
 
 <section class="section mt-6">
     <div class="has-text-centered mb-5">
-        <h1 class="title ">{{.Title }}</h1>
+        <h1 class="title ">{{ .Title }}</h1>
     </div>
     <div class="container">
 
@@ -11,12 +11,15 @@
             <div class="column is-half">
                 <a href="{{ .RelPermalink }}">
                     <div class="card">
-                        {{ $imagePath := printf "images/%s" .Params.PicPath }}
-                        {{ $asset := resources.Get $imagePath }}
-                        {{ $img := $asset.Fit "600x600" }}
+                        {{ $imgRender := "/img/background.avif" }}
+                        {{ if isset .Params "PicPath" }}
+                            {{ $imagePath := printf "images/%s" .Params.PicPath }}
+                            {{ $asset := resources.Get $imagePath }}
+                            {{ $imgRender := $asset.Resize "x600 webp picture" }}
+                        {{ end }}
                         <div class="card-image">
                             <figure class="image is-3by1">
-                                <img class="image-block" src="{{ $img.RelPermalink }}" alt="Placeholder image">
+                                <img class="image-block" src="{{ $imgRender }}" alt="Placeholder image">
                             </figure>
                         </div>
                         <div class="card-content">
