--- a/themes/portfolio-klsx/static/css/styles.css
+++ b/themes/portfolio-klsx/static/css/styles.css
@@ -153,3 +153,17 @@ strong {
 h1 {
   color: #00B4D6 !important;
 }
+
+.card {
+  height: 100%;
+  display:flex;
+  flex-direction: column;
+}
+.card-content {
+  padding-bottom: 0rem;
+  width: 100%;
+}
+.card-footer {
+  margin-top: auto;
+  border-top: none;
+}
