Fix all the links in all pages

--- a/themes/portfolio-klsx/layouts/_default/single.html
+++ b/themes/portfolio-klsx/layouts/_default/single.html
@@ -31,7 +31,7 @@
                           <img class="image-block" src="{{ $img.RelPermalink }}" alt="Placeholder image">
                       </figure>
                   </div>
-                  <div class="card-content">
+                  <div class="card-content mb-5">
                       <div class="media">
                           <div class="media-content">
                               <p class="title is-4">{{ .Title }}</p>
