--- a/themes/portfolio-klsx/static/css/styles.css
+++ b/themes/portfolio-klsx/static/css/styles.css
@@ -116,7 +116,7 @@ p {
 }
 
 .active {
-    background-color: #B90000 !important;
+    background-color: #81B900 !important;
     color: white !important;
 }
 hr.comp {
