--- a/themes/portfolio-klsx/layouts/partials/intro.html
+++ b/themes/portfolio-klsx/layouts/partials/intro.html
@@ -6,7 +6,7 @@
         </p>
         <hr class="hr-title mb-2">
         <p class="subtitle intro-subtitle">
-          Expert en Ingénérie des Systèmes d'Informations
+          Expert en ingénierie des systèmes d'information
         </p>
       </div>
     </div>
