--- a/themes/portfolio-klsx/layouts/partials/propos.html
+++ b/themes/portfolio-klsx/layouts/partials/propos.html
@@ -3,7 +3,7 @@
     <hr>
     <br>
     <br>
-    <div class="columns is-centered is-vcentered mx-5 px-5">
+    <div class="columns is-centered is-vcentered">
       <div class="column is-two-fifths">
         {{ $asset := resources.Get "images/intro/about.jpg" }}
         {{ $img := $asset.Fit "500x500" }}
