--- a/themes/portfolio-klsx/layouts/realisations/list.html
+++ b/themes/portfolio-klsx/layouts/realisations/list.html
@@ -22,7 +22,7 @@
                         <div class="card-content">
                             <div class="media">
                                 <div class="media-content">
-                                    <p class="title is-4">{{ .Title }}</p>
+                                    <p class="title is-4"><b>{{ .Title }}</b></p>
                                     <p class="subtitle is-6"> {{ .Description }}</p>
                                 </div>
                             </div>
