--- a/themes/portfolio-klsx/layouts/partials/head.html
+++ b/themes/portfolio-klsx/layouts/partials/head.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="/css/bulma-timeline.min.css" >
     <link rel="stylesheet" href="/css/styles.css" >
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+    <link rel="manifest" href="/img/site.webmanifest">
     <title>{{ block "title" . }}
       {{ .Site.Title }}
       {{ end }}</title>
