Adding Highlight section in the main page

--- a/themes/portfolio-klsx/layouts/index.html
+++ b/themes/portfolio-klsx/layouts/index.html
@@ -4,6 +4,8 @@
 <div class="container">
 
     {{- partial "propos" . -}}
+
+    {{- partial "highlights" . -}}
     
     {{- partial "parcours" . -}}
     
