--- a/themes/portfolio-klsx/layouts/partials/propos.html
+++ b/themes/portfolio-klsx/layouts/partials/propos.html
@@ -1,5 +1,5 @@
 <section class="section has-text-centered pres ">
-    <h1 class="title">A propos de moi</h1>
+    <h1 class="title">À propos de moi</h1>
     <hr>
     <br>
     <br>
